--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "bootstrap with sass",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch scss:assets/css"
+    "compile:sass": "sass --watch scss:assets/css",
+    "publish": "subpath-as-branch --path dist --branch gh-pages"
   },
   "keywords": [
     "Bootstrap",
